--- a/Lucuber/ViewControllers/Formula/AddFormula/AddFormulaViewController/AddFormula.storyboard
+++ b/Lucuber/ViewControllers/Formula/AddFormula/AddFormulaViewController/AddFormula.storyboard
@@ -55,11 +55,8 @@
                                                     <constraint firstAttribute="height" constant="100" id="9HR-ya-1D8"/>
                                                     <constraint firstAttribute="width" constant="100" id="dbw-lk-buS"/>
                                                 </constraints>
-                                                <state key="normal" backgroundImage="placeholder"/>
+                                                <state key="normal" backgroundImage="6jie"/>
                                             </button>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Favorite" translatesAutoresizingMaskIntoConstraints="NO" id="ynv-Xi-kP0">
-                                                <rect key="frame" x="316" y="89" width="15" height="15"/>
-                                            </imageView>
                                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创建时间: 16-07" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGi-1c-ut1">
                                                 <rect key="frame" x="123" y="94" width="61" height="10"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -75,25 +72,44 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVQ-wN-WoR">
-                                                <rect key="frame" x="123" y="71" width="41" height="18"/>
+                                                <rect key="frame" x="123" y="45" width="41" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4E6-uE-bnO" customClass="FormulaTypeIndicaterView" customModule="Lucuber" customModuleProvider="target">
                                                 <rect key="frame" x="285" y="15" width="30" height="30"/>
                                             </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jxr-aw-oYG" customClass="StarRatingView" customModule="Lucuber" customModuleProvider="target">
+                                                <rect key="frame" x="121" y="71" width="86" height="15"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="86" id="RCR-qo-wNY"/>
+                                                    <constraint firstAttribute="height" constant="15" id="aDb-GI-IPY"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="rating">
+                                                        <integer key="value" value="3"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="maxRating">
+                                                        <integer key="value" value="5"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="iGi-1c-ut1" firstAttribute="leading" secondItem="qDg-kf-Syb" secondAttribute="leading" id="0ua-nU-gOn"/>
+                                            <constraint firstItem="jxr-aw-oYG" firstAttribute="top" secondItem="gVQ-wN-WoR" secondAttribute="bottom" constant="8" id="1Io-Nu-uVR"/>
                                             <constraint firstItem="4E6-uE-bnO" firstAttribute="top" secondItem="jfq-Bh-2db" secondAttribute="top" id="5SC-rc-DA0"/>
+                                            <constraint firstItem="jxr-aw-oYG" firstAttribute="leading" secondItem="iGi-1c-ut1" secondAttribute="leading" constant="-2" id="72b-pE-ubb"/>
                                             <constraint firstItem="qDg-kf-Syb" firstAttribute="bottom" secondItem="jfq-Bh-2db" secondAttribute="bottom" id="7VO-aA-Mmm"/>
                                             <constraint firstItem="iGi-1c-ut1" firstAttribute="top" secondItem="gVQ-wN-WoR" secondAttribute="bottom" constant="5" id="OVk-DC-KeA"/>
                                             <constraint firstAttribute="height" constant="130" id="QWq-eT-hFJ"/>
                                             <constraint firstItem="gVQ-wN-WoR" firstAttribute="leading" secondItem="iGi-1c-ut1" secondAttribute="leading" id="Xuo-mK-12k"/>
                                             <constraint firstItem="qDg-kf-Syb" firstAttribute="top" secondItem="iGi-1c-ut1" secondAttribute="bottom" constant="1" id="aCQ-MO-ta8"/>
                                             <constraint firstItem="gVQ-wN-WoR" firstAttribute="centerY" secondItem="jfq-Bh-2db" secondAttribute="centerY" id="gEU-Or-Aad"/>
+                                            <constraint firstItem="iGi-1c-ut1" firstAttribute="top" secondItem="jxr-aw-oYG" secondAttribute="bottom" constant="8" id="iLR-GM-e9s"/>
                                             <constraint firstItem="jfq-Bh-2db" firstAttribute="leading" secondItem="GMf-Kg-esj" secondAttribute="leading" constant="15" id="iua-jv-nVu"/>
                                             <constraint firstItem="jfq-Bh-2db" firstAttribute="centerY" secondItem="GMf-Kg-esj" secondAttribute="centerY" id="jAg-yr-99B"/>
                                             <constraint firstItem="qDg-kf-Syb" firstAttribute="leading" secondItem="jfq-Bh-2db" secondAttribute="trailing" constant="8" id="qPd-sO-fXI"/>
@@ -102,6 +118,7 @@
                                         <variation key="default">
                                             <mask key="constraints">
                                                 <exclude reference="gEU-Or-Aad"/>
+                                                <exclude reference="OVk-DC-KeA"/>
                                             </mask>
                                         </variation>
                                     </view>
@@ -157,7 +174,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Favorite" width="42" height="40"/>
-        <image name="placeholder" width="575" height="600"/>
+        <image name="6jie" width="91" height="91"/>
     </resources>
 </document>
