--- a/Lucuber/Views/Formula/CardCell/CardFormulaCell.xib
+++ b/Lucuber/Views/Formula/CardCell/CardFormulaCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -16,8 +17,14 @@
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="x83-3g-vda">
                         <rect key="frame" x="0.0" y="0.0" width="170" height="170"/>
                         <constraints>
+                            <constraint firstAttribute="width" secondItem="x83-3g-vda" secondAttribute="height" multiplier="1:1" id="4pa-we-iO2"/>
                             <constraint firstAttribute="height" constant="170" id="pZz-He-DtQ"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="pZz-He-DtQ"/>
+                            </mask>
+                        </variation>
                     </imageView>
                     <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L2q-zL-u3E">
                         <rect key="frame" x="10" y="180" width="126" height="17"/>
