实现增加公式输入Cell的功能，重新设计TextView的PlaceholderLabel

--- a/Lucuber/Views/AddFormula/FormulaTextCell/FormulaTextViewCell.xib
+++ b/Lucuber/Views/AddFormula/FormulaTextCell/FormulaTextViewCell.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -19,15 +20,48 @@
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                     </textView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k22-5h-CPC">
+                        <rect key="frame" x="40" y="10" width="240" height="45"/>
+                        <attributedString key="attributedText">
+                            <fragment content="Formula">
+                                <attributes>
+                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <font key="NSFont" size="17" name="HelveticaNeue"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                </attributes>
+                            </fragment>
+                        </attributedString>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Placeholder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RzW-IZ-j14">
+                        <rect key="frame" x="115" y="22" width="91" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="k22-5h-CPC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="3Nk-Jt-d3w"/>
+                    <constraint firstItem="k22-5h-CPC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="9PW-tH-4ia"/>
+                    <constraint firstAttribute="bottom" secondItem="k22-5h-CPC" secondAttribute="bottom" constant="10" id="I2A-Gb-OHK"/>
                     <constraint firstAttribute="bottom" secondItem="8dt-wG-5Ix" secondAttribute="bottom" constant="5" id="LOc-Wh-YqS"/>
                     <constraint firstItem="8dt-wG-5Ix" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="ahL-va-JnD"/>
+                    <constraint firstItem="RzW-IZ-j14" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="g5f-3k-zJj"/>
                     <constraint firstAttribute="trailing" secondItem="8dt-wG-5Ix" secondAttribute="trailing" constant="20" id="jOE-c4-HsS"/>
                     <constraint firstItem="8dt-wG-5Ix" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="lKx-YQ-iiB"/>
+                    <constraint firstItem="RzW-IZ-j14" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="mch-qt-XgW"/>
+                    <constraint firstItem="k22-5h-CPC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="10" id="wFy-EG-ZfH"/>
+                    <constraint firstAttribute="trailing" secondItem="k22-5h-CPC" secondAttribute="trailing" constant="40" id="wwO-5H-caN"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="wFy-EG-ZfH"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="formulaLabel" destination="k22-5h-CPC" id="tHJ-XB-P6w"/>
+                <outlet property="placeholderLabel" destination="RzW-IZ-j14" id="Weh-30-x0M"/>
                 <outlet property="textView" destination="8dt-wG-5Ix" id="bu8-hK-ZVf"/>
             </connections>
             <point key="canvasLocation" x="305" y="518"/>
