--- a/Lucuber/ViewControllers/Formula/AddFormula/AddFormulaViewController/AddFormula.storyboard
+++ b/Lucuber/ViewControllers/Formula/AddFormula/AddFormulaViewController/AddFormula.storyboard
@@ -59,21 +59,21 @@
                                                 <state key="normal" backgroundImage="6jie"/>
                                             </button>
                                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="创建时间: 16-07" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGi-1c-ut1">
-                                                <rect key="frame" x="123" y="94" width="61" height="10"/>
+                                                <rect key="frame" x="127" y="94" width="61" height="10"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                 <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="来自: Hoooward" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDg-kf-Syb">
-                                                <rect key="frame" x="123" y="105" width="61" height="10"/>
+                                                <rect key="frame" x="127" y="105" width="61" height="10"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                 <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gVQ-wN-WoR">
-                                                <rect key="frame" x="123" y="45" width="41" height="18"/>
+                                                <rect key="frame" x="127" y="45" width="41" height="18"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -82,7 +82,7 @@
                                                 <rect key="frame" x="285" y="15" width="30" height="30"/>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jxr-aw-oYG" customClass="StarRatingView" customModule="Lucuber" customModuleProvider="target">
-                                                <rect key="frame" x="121" y="71" width="86" height="15"/>
+                                                <rect key="frame" x="125" y="71" width="86" height="15"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="86" id="RCR-qo-wNY"/>
@@ -98,24 +98,54 @@
                                                     <userDefinedRuntimeAttribute type="boolean" keyPath="editable" value="NO"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BL" translatesAutoresizingMaskIntoConstraints="NO" id="IxS-qB-NC8">
+                                                <rect key="frame" x="5" y="5" width="20" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="20" id="2Pj-fY-bN5"/>
+                                                    <constraint firstAttribute="height" constant="20" id="adu-7D-55T"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BR" translatesAutoresizingMaskIntoConstraints="NO" id="iF6-z7-FZn">
+                                                <rect key="frame" x="105" y="5" width="20" height="20"/>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FL" translatesAutoresizingMaskIntoConstraints="NO" id="nyP-Mz-0MZ">
+                                                <rect key="frame" x="105" y="105" width="20" height="20"/>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="FR" translatesAutoresizingMaskIntoConstraints="NO" id="iwA-aj-e98">
+                                                <rect key="frame" x="5" y="105" width="20" height="20"/>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstItem="jfq-Bh-2db" firstAttribute="top" secondItem="iF6-z7-FZn" secondAttribute="bottom" constant="-10" id="00W-oz-yJd"/>
                                             <constraint firstItem="iGi-1c-ut1" firstAttribute="leading" secondItem="qDg-kf-Syb" secondAttribute="leading" id="0ua-nU-gOn"/>
                                             <constraint firstItem="jxr-aw-oYG" firstAttribute="top" secondItem="gVQ-wN-WoR" secondAttribute="bottom" constant="8" id="1Io-Nu-uVR"/>
                                             <constraint firstItem="4E6-uE-bnO" firstAttribute="top" secondItem="jfq-Bh-2db" secondAttribute="top" id="5SC-rc-DA0"/>
                                             <constraint firstItem="jxr-aw-oYG" firstAttribute="leading" secondItem="iGi-1c-ut1" secondAttribute="leading" constant="-2" id="72b-pE-ubb"/>
                                             <constraint firstItem="qDg-kf-Syb" firstAttribute="bottom" secondItem="jfq-Bh-2db" secondAttribute="bottom" id="7VO-aA-Mmm"/>
+                                            <constraint firstItem="jfq-Bh-2db" firstAttribute="leading" secondItem="IxS-qB-NC8" secondAttribute="trailing" constant="-10" id="82V-PK-iep"/>
+                                            <constraint firstItem="nyP-Mz-0MZ" firstAttribute="leading" secondItem="jfq-Bh-2db" secondAttribute="trailing" constant="-10" id="8ze-8j-Pgi"/>
+                                            <constraint firstItem="iwA-aj-e98" firstAttribute="width" secondItem="IxS-qB-NC8" secondAttribute="width" id="Aao-0I-kok"/>
+                                            <constraint firstItem="iF6-z7-FZn" firstAttribute="width" secondItem="IxS-qB-NC8" secondAttribute="width" id="GN3-lK-iNY"/>
+                                            <constraint firstItem="iwA-aj-e98" firstAttribute="top" secondItem="jfq-Bh-2db" secondAttribute="bottom" constant="-10" id="HnE-yW-zsm"/>
+                                            <constraint firstItem="iF6-z7-FZn" firstAttribute="leading" secondItem="jfq-Bh-2db" secondAttribute="trailing" constant="-10" id="Jvf-B1-C9e"/>
+                                            <constraint firstItem="iwA-aj-e98" firstAttribute="height" secondItem="IxS-qB-NC8" secondAttribute="height" id="MkI-dv-7yh"/>
                                             <constraint firstItem="iGi-1c-ut1" firstAttribute="top" secondItem="gVQ-wN-WoR" secondAttribute="bottom" constant="5" id="OVk-DC-KeA"/>
                                             <constraint firstAttribute="height" constant="130" id="QWq-eT-hFJ"/>
+                                            <constraint firstItem="nyP-Mz-0MZ" firstAttribute="top" secondItem="jfq-Bh-2db" secondAttribute="bottom" constant="-10" id="Qaq-lg-1Tq"/>
                                             <constraint firstItem="gVQ-wN-WoR" firstAttribute="leading" secondItem="iGi-1c-ut1" secondAttribute="leading" id="Xuo-mK-12k"/>
                                             <constraint firstItem="qDg-kf-Syb" firstAttribute="top" secondItem="iGi-1c-ut1" secondAttribute="bottom" constant="1" id="aCQ-MO-ta8"/>
+                                            <constraint firstItem="nyP-Mz-0MZ" firstAttribute="height" secondItem="IxS-qB-NC8" secondAttribute="height" id="cl9-Ve-lUY"/>
                                             <constraint firstItem="gVQ-wN-WoR" firstAttribute="centerY" secondItem="jfq-Bh-2db" secondAttribute="centerY" id="gEU-Or-Aad"/>
+                                            <constraint firstItem="jfq-Bh-2db" firstAttribute="leading" secondItem="iwA-aj-e98" secondAttribute="trailing" constant="-10" id="gVX-Kc-8CI"/>
                                             <constraint firstItem="iGi-1c-ut1" firstAttribute="top" secondItem="jxr-aw-oYG" secondAttribute="bottom" constant="8" id="iLR-GM-e9s"/>
                                             <constraint firstItem="jfq-Bh-2db" firstAttribute="leading" secondItem="GMf-Kg-esj" secondAttribute="leading" constant="15" id="iua-jv-nVu"/>
                                             <constraint firstItem="jfq-Bh-2db" firstAttribute="centerY" secondItem="GMf-Kg-esj" secondAttribute="centerY" id="jAg-yr-99B"/>
-                                            <constraint firstItem="qDg-kf-Syb" firstAttribute="leading" secondItem="jfq-Bh-2db" secondAttribute="trailing" constant="8" id="qPd-sO-fXI"/>
+                                            <constraint firstItem="qDg-kf-Syb" firstAttribute="leading" secondItem="jfq-Bh-2db" secondAttribute="trailing" constant="12" id="qPd-sO-fXI"/>
+                                            <constraint firstItem="nyP-Mz-0MZ" firstAttribute="width" secondItem="IxS-qB-NC8" secondAttribute="width" id="sVo-hm-ZKD"/>
                                             <constraint firstAttribute="trailing" secondItem="4E6-uE-bnO" secondAttribute="trailing" constant="20" id="vRr-iQ-uTP"/>
+                                            <constraint firstItem="jfq-Bh-2db" firstAttribute="top" secondItem="IxS-qB-NC8" secondAttribute="bottom" constant="-10" id="vr3-t9-W89"/>
+                                            <constraint firstItem="iF6-z7-FZn" firstAttribute="height" secondItem="IxS-qB-NC8" secondAttribute="height" id="w8F-M8-o12"/>
                                         </constraints>
                                         <variation key="default">
                                             <mask key="constraints">
@@ -178,5 +208,9 @@
     </scenes>
     <resources>
         <image name="6jie" width="91" height="91"/>
+        <image name="BL" width="30" height="30"/>
+        <image name="BR" width="30" height="30"/>
+        <image name="FL" width="30" height="30"/>
+        <image name="FR" width="30" height="30"/>
     </resources>
 </document>
